Delete 3rd party sourcemaps

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-sass": "4.1.0",
-    "gulp-sourcemaps": "3.0.0",
     "postcss": "8.2.8",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.10"
@@ -37,5 +36,6 @@
   ],
   "engines": {
     "node": "^12 || ^14"
-  }
+  },
+  "dependencies": {}
 }
