--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.2.5",
     "browser-sync": "2.26.14",
+    "css-mqpacker": "^7.0.0",
+    "del": "^6.0.0",
     "gulp": "4.0.2",
+    "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-libsquoosh": "^1.0.12",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgmin": "^4.0.1",
+    "gulp-svgstore": "^8.0.0",
+    "gulp-terser": "^2.0.1",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
+    "postcss-csso": "^5.0.1",
     "sass": "1.37.0",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.10",
