--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-stylelint": "^13.0.0",
     "gulp-svgmin": "^4.0.1",
     "gulp-svgstore": "^8.0.0",
     "gulp-terser": "^2.0.1",
+    "gulp-w3cjs": "^1.3.2",
+    "gulp-webp": "^4.0.1",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
     "postcss-csso": "^5.0.1",
